<resources>
    <string name="app_name">ArlibAppsTest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="required">Required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="dose">Dose</string>
    <string name="strength">Strength</string>
    <string name="failed_to_get_data">Failed to fetch data</string>
    <string name="empty_data">Empty data</string>
    <string name="load_from_api">Load from api</string>
</resources>