<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                app:layout_constraintHorizontal_weight="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintEnd_toStartOf="@+id/tvName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvDose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dose"
                app:layout_constraintHorizontal_weight="1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDose"
                app:layout_constraintEnd_toStartOf="@+id/tvDose"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toTopOf="@+id/tvDose" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintBottom_toTopOf="@+id/tvStrength"
                app:layout_constraintEnd_toEndOf="@+id/tvName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView2"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Dose" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvStrength"
                app:layout_constraintEnd_toStartOf="@+id/tvStrength"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                app:layout_constraintTop_toTopOf="@+id/tvStrength" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStrength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_weight="2"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvDose"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialTextView3"
                app:layout_constraintTop_toBottomOf="@+id/tvDose"
                tools:text="500mg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>